# simplified-csapp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  codeformat.sh  copyright.py  countlines.sh  tools.py
include/: common.h  cpu.h  memory.h
src/: main.c  main_hardware.c
src/common/: convert.c  print.c
src/cpu/: mmu.c  mmu.h  register.h
src/disk/: code.c  elf.h
src/hardware/cpu/: isa.c  mmu.c
src/hardware/memory/: dram.c
src/headers/: common.h  cpu.h  memory.h
src/memory/: dram.c  dram.h  instruction.c  instruction.h
